--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
+		"jest": "jest",
     "dev": "nodemon ./bin/www"
   },
   "dependencies": {
@@ -16,6 +17,7 @@
     "mysql": "^2.17.1"
   },
   "devDependencies": {
+    "jest": "^24.8.0",
     "nodemon": "^1.19.1"
   }
 }
