--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "node ./bin/www",
     "jest": "jest",
-    "dev": "nodemon ./bin/www"
+    "dev": "nodemon ./bin/www --trace-sync-io"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
