--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "node ./bin/www",
     "jest": "jest",
-    "dev": "nodemon ./bin/www --trace-sync-io"
+    "dev": "DEBUG=express:* nodemon ./bin/www --trace-sync-io"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
@@ -19,6 +19,7 @@
   "devDependencies": {
     "eslint": "^6.0.1",
     "jest": "^24.8.0",
-    "nodemon": "^1.19.1"
+    "nodemon": "^1.19.1",
+    "winston": "^3.2.1"
   }
 }
